Bug 1037505 - Fix test_pop3MoveFilter.js failure matching messages. r=rkent